[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/character.gd" type="Script" id=1]
[ext_resource path="res://Textures/player_body.tex" type="Texture" id=2]
[ext_resource path="res://Textures/player_eye.tex" type="Texture" id=3]
[ext_resource path="res://Textures/player_right_foot.tex" type="Texture" id=4]
[ext_resource path="res://Textures/player_left_foot.tex" type="Texture" id=5]
[ext_resource path="res://Sounds/booster.smp" type="Sample" id=6]
[ext_resource path="res://Sounds/pop.smp" type="Sample" id=7]

[sub_resource type="LineShape2D" id=1]

custom_solver_bias = 0.0
normal = Vector2( 0, 0.5 )
d = 0.0

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("foot_right:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( -52.4097, 78.4184 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("foot_right:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("footer_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 7.57025, 77.3376 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("footer_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("body:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( -0.535156, 16.8173 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("body:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "jump_down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("foot_right:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -52.4097, 78.4184 ), Vector2( -43.8061, 78.4184 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("foot_right:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 14.733 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("footer_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 7.57025, 77.3376 ), Vector2( 7.57025, 77.3376 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("footer_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 14.3456 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("body:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -0.535156, 16.8173 ), Vector2( -0.535156, 16.8173 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("body:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, -8.97822 ] }

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("foot_right:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -52.4097, 78.4184 ), Vector2( -47.5465, 71.3937 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("foot_right:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, -26.1088 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("footer_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 7.57025, 77.3376 ), Vector2( 7.57025, 72.4744 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("footer_left:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, -19.2465 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("body:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -0.535156, 16.8173 ), Vector2( -0.535156, 16.8173 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("body:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 11.7887 ] }

[sub_resource type="SampleLibrary" id=5]

samples/booster = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/pop = { "db":-2.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[node name="character" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 94 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 12.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 94 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="character_sprites" type="Node2D" parent="."]

[node name="body" type="Sprite" parent="character_sprites"]

transform/pos = Vector2( -0.535156, 16.8173 )
z/z = 1
texture = ExtResource( 2 )
offset = Vector2( 0.535156, -16.8173 )

[node name="eye_right" type="Sprite" parent="character_sprites/body"]

transform/pos = Vector2( 22.1629, -1.89804 )
texture = ExtResource( 3 )

[node name="eye_left" type="Sprite" parent="character_sprites/body"]

transform/pos = Vector2( 49.1809, -1.89804 )
texture = ExtResource( 3 )

[node name="foot_right" type="Sprite" parent="character_sprites"]

transform/pos = Vector2( -52.4097, 78.4184 )
z/z = 2
texture = ExtResource( 4 )
offset = Vector2( 23.9321, -6.17156 )

[node name="footer_left" type="Sprite" parent="character_sprites"]

transform/pos = Vector2( 7.57025, 77.3376 )
texture = ExtResource( 5 )
offset = Vector2( 23.5531, -6.92941 )

[node name="anim_player" type="AnimationPlayer" parent="character_sprites"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 2 )
anims/jump_down = SubResource( 3 )
anims/jump_up = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "base"

[node name="raycast_down" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 62.4006 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 3

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 1.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


